# the-game-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log4cpp.conf  thegame.conf  thegame.sql  thegame.toml  thegame.toml.sample
libs/: chrono_io  ratio_io
src/: Application.cpp  Application.hpp  AsioFormatter.hpp  Bot.cpp  Bot.hpp  ChatMessage.hpp  Config.cpp  Config.hpp  Event.hpp  EventEmitter.hpp  FileIOError.hpp  Gridmap.cpp  Gridmap.hpp  HttpClient.cpp  HttpClient.hpp  IEntityFactory.hpp  IOThreadPool.cpp  IOThreadPool.hpp  IncomingPacket.hpp  Listener.cpp  Listener.hpp  ListenerFwd.hpp  Logger.cpp  Logger.hpp  MemoryStream.cpp  MemoryStream.hpp  MySQLConfig.hpp  MySQLConnectionPool.cpp  MySQLConnectionPool.hpp  NextId.cpp  NextId.hpp  ObjectPool.hpp  OutgoingPacket.cpp  OutgoingPacket.hpp  Player.cpp  Player.hpp  PlayerFwd.hpp  Room.cpp  Room.hpp  RoomConfig.hpp  (+25 more)
src/entity/: Avatar.cpp  Avatar.hpp  Bullet.cpp  Bullet.hpp  Cell.cpp  Cell.hpp  Food.cpp  Food.hpp  Mass.cpp  Mass.hpp  Mother.cpp  Mother.hpp  Phage.cpp  Phage.hpp  Virus.cpp  Virus.hpp
src/geometry/: AABB.cpp  AABB.hpp  Circle.hpp  Vec2D.cpp  Vec2D.hpp  formatter.hpp  geometry.cpp  geometry.hpp
src/packet/: EmptyPacket.cpp  EmptyPacket.hpp  InputPacketTypes.hpp  OutputPacketTypes.hpp  Packet.cpp  Packet.hpp  PacketGreeting.cpp  PacketGreeting.hpp  PacketLeaderboard.cpp  PacketLeaderboard.hpp  PacketPlay.cpp  PacketPlay.hpp  PacketSpectate.cpp  PacketSpectate.hpp  serialization.hpp
tests/: CMakeLists.txt  Test_Game.cpp  Test_MemoryStream.cpp  test_Vec2D.cpp  test_Vec2D.hpp  testrunner_Vec2D.cpp
tests/geometry/: AABB_Test.cpp  Test_AABB.cpp  Test_Vec2D.cpp  Test_geometry.cpp  Vec2D_Test.cpp
